--- a/webpages/teacher_dashboard/style.css
+++ b/webpages/teacher_dashboard/style.css
@@ -3,6 +3,7 @@
     --panelColor: #FFE8F1;
     --menuColor: #3B2333;
     --paddingGap: 0.9em;
+    --menuTransition: 0.5s;
 }
 
 body {
@@ -46,6 +47,7 @@ body {
     background: none;
     outline: none;
     width: 27px;
+    z-index: 99;
 }
 
 .hamberger .navbar, .hamberger:after, .hamberger::before {
@@ -53,19 +55,21 @@ body {
     content: '';
     width: 100%;
     height: 4px;
-    background-color: #FFFFFF;
+    background-color: #000000;
     margin: 4.5px 0;
-    transition: 0.4s;
+    transition: var(--menuTransition);
 }
 
 
 /* Menu icon to corss icon*/
 .hamberger.is-active:before {
     transform: rotate(45deg) translate(3px, 11px);
+    background-color: #FFFFFF;
 }
 
 .hamberger.is-active:after {
     transform: rotate(-45deg) translate(0px, -9px);
+    background-color: #FFFFFF;
 }
 
 .hamberger.is-active .navbar {
@@ -84,8 +88,34 @@ body {
 /* Navigation Bar */
 .navigation {
     position: fixed;
-    list-style: none;
     top: 0;
+    left: -100%;
+    width: 200px;
+    min-height: 100vh;
+    z-index: 98;
+    background-color: var(--menuColor);
+    padding-top: 3em;
+    transition: var(--menuTransition);
+
+    display: flex;
+    flex-direction: column;
+    a {
+        padding: calc(0.6*var(--paddingGap)) var(--paddingGap);
+        color: #FFFFFF;
+        text-decoration: none;
+        border: 0;
+        transition: 0.2s;
+    }
+
+    a:hover {
+        padding: calc(0.5*var(--paddingGap)) var(--paddingGap);
+        color: #FFFFFF;
+        text-decoration: none;
+        background-color: #5f3852;
+    }
+}
+
+.navigation.is-active {
     left: 0;
 }
 /**/
