--- a/webpages/teacher_dashboard/style.css
+++ b/webpages/teacher_dashboard/style.css
@@ -1,7 +1,7 @@
 :root {
-    --primaryColor: #843D59;
+    --primaryColor: #9b019b;
     --panelColor: #FFE8F1;
-    --menuColor: #3B2333;
+    --menuColor: #320021;
     --paddingGap: 0.9em;
     --menuTransition: 0.5s;
 }
@@ -14,6 +14,8 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
+    background-color: #4C004C;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23690069' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23790079'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 .header {
@@ -22,7 +24,7 @@ body {
     justify-content: space-between;
     align-items: stretch;
     padding: calc(0.6*var(--paddingGap)) var(--paddingGap);
-    background-color: var(--primaryColor);
+    /* background-color: var(--primaryColor); */
 }
 
 /* Menu icon to corss icon*/
@@ -80,7 +82,7 @@ body {
     width: 200px;
     min-height: 100vh;
     z-index: 98;
-    background-color: var(--menuColor);
+    background-color: #1f0014e1;
     padding-top: 3em;
     transition: var(--menuTransition);
 
@@ -112,7 +114,7 @@ body {
     flex-direction: column;
     height: 100vh;
     margin: var(--paddingGap) var(--paddingGap);
-
+    
     gap: var(--paddingGap);
 }
 
@@ -122,9 +124,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     gap: 1em;
-    background-color: var(--panelColor);
+    background-color: #8b018b4b;
 }
 
 .mainPage > .profile > .profilePic {
@@ -158,7 +159,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--panelColor);
+    /* background-color: #7903794b; */
 }
 
 /* .mainPage > .options > .createClass {
