--- a/webpages/teacher_dashboard/style.css
+++ b/webpages/teacher_dashboard/style.css
@@ -1,14 +1,13 @@
 :root {
     --primaryColor: #9b019b;
-    --panelColor: #FFE8F1;
-    --menuColor: #320021;
+    --panelColor: #cf00cf3f;
+    --menuColor: #2f001ec1;
     --paddingGap: 0.9em;
     --menuTransition: 0.5s;
 }
 
 body {
     font-family: sans-serif;
-
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -24,7 +23,6 @@ body {
     justify-content: space-between;
     align-items: stretch;
     padding: calc(0.6*var(--paddingGap)) var(--paddingGap);
-    /* background-color: var(--primaryColor); */
 }
 
 /* Menu icon to corss icon*/
@@ -82,7 +80,7 @@ body {
     width: 200px;
     min-height: 100vh;
     z-index: 98;
-    background-color: #1f0014e1;
+    background-color: var(--menuColor);
     padding-top: 3em;
     transition: var(--menuTransition);
 
@@ -125,7 +123,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 1em;
-    background-color: #8b018b4b;
+    background-color: var(--panelColor);
 }
 
 .mainPage > .profile > .profilePic {
@@ -138,7 +136,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     gap: 0.2em;
 }
 
@@ -156,16 +153,4 @@ body {
 .mainPage > .options {
     display: flex;
     flex: 1;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* background-color: #7903794b; */
 }
-
-/* .mainPage > .options > .createClass {
-    background-color: var(--primaryColor);
-    color: #FFFFFF;
-    border: 0;
-    padding: 0.7em 1.5em;
-    border-radius: 10em;
-} */
