--- a/webpages/login/style.css
+++ b/webpages/login/style.css
@@ -174,13 +174,13 @@ body {
     border: 0;
     cursor: pointer;
     padding: 0.5em 3em;
-    border: 2px solid #4C004C;
+    border: 3px solid #4C004C;
     border-radius: 0.5em;
     width: 50px;
 }
 
 .mainPage .loginContainer .loginButton:focus {
-    border: 2px solid #000000;
+    border: 3px solid orange;
 }
 
 
