--- a/webpages/login/style.css
+++ b/webpages/login/style.css
@@ -1,106 +1,3 @@
-:root {
-    --primaryColor: #9b019b;
-    --panelColor: #cf00cf3f;
-    --menuColor: #2f001ec1;
-    --paddingGap: 0.9em;
-    --menuTransition: 0.5s;
-}
-
-body {
-    font-family: sans-serif;
-
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    background-color: #4C004C;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23690069' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23790079'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
-}
-
-.header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: stretch;
-    padding: calc(0.6*var(--paddingGap)) var(--paddingGap);
-    /* background-color: var(--primaryColor); */
-}
-
-/* Menu icon to corss icon*/
-.hamburger {
-    position: relative;
-    display: block;
-    cursor: pointer;
-    padding: 0;   
-    border: none;
-    appearance: none;
-    background: none;
-    outline: none;
-    width: 27px;
-    z-index: 99;
-}
-
-.hamburger .navbar, .hamburger:after, .hamburger::before {
-    display: block;
-    content: '';
-    width: 100%;
-    height: 4px;
-    background-color: #000000;
-    margin: 4.5px 0;
-    transition: var(--menuTransition);
-}
-
-.hamburger.is-active:before {
-    transform: rotate(45deg) translate(3px, 11px);
-    background-color: #FFFFFF;
-}
-
-.hamburger.is-active:after {
-    transform: rotate(-45deg) translate(0px, -9px);
-    background-color: #FFFFFF;
-}
-
-.hamburger.is-active .navbar {
-    opacity: 0;
-}
-/**/
-
-/* Navigation Bar */
-.navigation {
-    position: fixed;
-    top: 0;
-    left: -100%;
-    width: 200px;
-    min-height: 100vh;
-    z-index: 98;
-    background-color: var(--menuColor);
-    padding-top: 3em;
-    transition: var(--menuTransition);
-    
-    display: flex;
-    flex-direction: column;
-    a {
-        padding: calc(0.6*var(--paddingGap)) var(--paddingGap);
-        color: #FFFFFF;
-        text-decoration: none;
-        border: 0;
-        transition: 0.2s;
-    }
-    
-    a:hover {
-        padding: calc(0.5*var(--paddingGap)) var(--paddingGap);
-        color: #FFFFFF;
-        text-decoration: none;
-        background-color: #5f3852;
-    }
-}
-
-.navigation.is-active {
-    left: 0;
-}
-/**/
-
 .logOut {
     background-color: var(--menuColor);
     color: #FFFFFF;
@@ -108,7 +5,6 @@ body {
     padding: 0 2em;
     border-radius: 10em;
 }
-
 
 /* Log In */
 .mainPage {
@@ -123,12 +19,14 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-    border-radius: 1em;
+    border-radius: 0.3em;
     height: calc(0.6*100vh);
     width: 320px;
+    box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.185);
+    /* background-color: var(--primaryColor); */
     margin-bottom: 3em; /*remove to perfectly center*/
-    background-color: white;
 }
+
 
 .loginContainer .loginText {
     display: flex;
