--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .mainPage {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     /* height: 100vh; */
     margin: var(--paddingGap) var(--paddingGap);
@@ -14,6 +14,10 @@
     border: 0;
     padding: 0 2em;
     border-radius: 10em;
+}
+
+.panel {
+    padding: var(--paddingGap);
 }
 
 
