--- a/tables.css
+++ b/tables.css
@@ -53,6 +53,12 @@
     transform: scale(1.012);
 }
 
+@media only screen and (max-width: 395px) {
+    .table > a > .lectureTitle {
+        word-break: break-all;
+    }
+}
+
 .table .lectureNumber,
 .table .section {
     width: 2.5em;
