Removed 'my class' from nav mn meenu as it is currently redundant, fixed outlining in login page

--- a/webpages/login/login.css
+++ b/webpages/login/login.css
@@ -20,10 +20,10 @@
     justify-content: center;
     align-items: stretch;
     border-radius: 0.3em;
-    height: calc(0.6*100vh);
+    height: 400px;
     width: 320px;
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.185);
-    /* background-color: var(--primaryColor); */
+    /* background-color: #ffffffa5; */
     margin-bottom: 3em; /*remove to perfectly center*/
 }
 
@@ -62,11 +62,12 @@
     border-left: 0;
     border-right: 0;
     height: 35px;
-    border-radius: 0.4em;
+    font-size: 1.1em;
 }
 
 .mainPage .loginContainer .loginInput .box:focus {
-    border: 3px solid orange;
+    outline: 0;
+    border-bottom: 3px solid orange;
 } 
 
 .mainPage .loginContainer .loginButton {
