--- a/webpages/student_dahboard/student_dashboard.css
+++ b/webpages/student_dahboard/student_dashboard.css
@@ -39,3 +39,13 @@
     font-weight: 500;
 }
 
+.mainPage .markAttendance {
+    border: 0;
+    background-color: var(--primaryColor);
+    border-radius: 2em;
+    width: 12em;
+    padding: 0.7em 2em;
+    font-size: 1em;
+    cursor: pointer;
+    align-self: center;
+}
