--- a/menu.css
+++ b/menu.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     display: flex;
     flex-direction: column;
     margin: 0;
