--- a/webpages/login/login.css
+++ b/webpages/login/login.css
@@ -1,9 +1,29 @@
-.logOut {
-    background-color: var(--menuColor);
-    color: #FFFFFF;
-    border: 0;
-    padding: 0 2em;
-    border-radius: 10em;
+/*Background*/
+body {
+    background-image: url("background.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+header.header {
+    background-color: #ad311b;
+}
+
+.loginContainer {
+    color: rgba(255, 255, 255, 0.849);
+}
+
+.loginContainer .loginText {
+    color: white;
+}
+
+.mainPage .loginContainer .loginInput .box {
+    color: white;
+}
+
+nav.navigation {
+    opacity: 0.9;
 }
 
 /* Log In */
@@ -23,10 +43,13 @@
     height: 400px;
     width: 320px;
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.185);
-    /* background-color: #ffffffa5; */
     margin-bottom: 3em; /*remove to perfectly center*/
 }
 
+.loginContainer {
+    background-color: rgba(0, 0, 0, 0.482);
+    /* backdrop-filter: blur(1px); */
+}
 
 .loginContainer .loginText {
     display: flex;
@@ -54,15 +77,17 @@
 
 .mainPage .loginContainer .loginInput .text {
     font-size: 20px;
+    font-weight: 600;
 }
 
 .mainPage .loginContainer .loginInput .box {
-    border: 3px solid #ebebeb;
+    border: 3px solid #c5c5c5;
     border-top: 0;
     border-left: 0;
     border-right: 0;
     height: 35px;
     font-size: 1.1em;
+    background: none
 }
 
 .mainPage .loginContainer .loginInput .box:focus {
@@ -74,18 +99,19 @@
     display: flex;
     justify-content: center;
     align-self: center;
-    background-color: var(--primaryColor);
-    color: var(--textColor);
+    background-color: rgba(255, 255, 255, 0);
+    color: var(--textAltColor);
     border: 0;
     cursor: pointer;
     padding: 0.5em 3em;
-    border: 2px solid var(--primaryColor);
-    border-radius: 0.5em;
+    border: 2px solid rgba(255, 255, 255, 0.849);
+    border-radius: 2em;
     width: 50px;
+    font-size: 1em;
 }
 
-.mainPage .loginContainer .loginButton:focus {
-    border: 3px solid orange;
+.mainPage .loginContainer .loginButton:hover {
+    background-color: rgba(255, 255, 255, 0.128);
 }
 
 
