--- a/webpages/login/login.css
+++ b/webpages/login/login.css
@@ -7,7 +7,7 @@ body {
 }
 
 header.header {
-    background-color: #ad311b;
+    background-color: #8d2310;
 }
 
 .loginContainer {
@@ -39,7 +39,7 @@ nav.navigation {
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-    border-radius: 0.3em;
+    border-radius: 0.5rem;
     height: 400px;
     width: 320px;
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.185);
