--- a/webpages/admin/dropDown.css
+++ b/webpages/admin/dropDown.css
@@ -20,7 +20,7 @@
     display: none;
     position: absolute;
     top: 35px;
-    background-color: #444444;
+    background-color: #353535;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -36,7 +36,7 @@
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-    background-color: var(--panelColor);
+    background-color: var(--adminPanelColor);
 }
 
 /* Show the dropdown menu on hover */
@@ -46,10 +46,10 @@
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover {
-    background-color: var(--panelColor); 
+    background-color: var(--adminPanelColor); 
 }
 .dropdown:hover .dropbtn{
-    background-color: var(--panelColor);  
+    background-color: var(--adminPanelColor);  
     background: none;
 }
 
