Changed padding of profiles

--- a/webpages/student_dahboard/student_dashboard.css
+++ b/webpages/student_dahboard/student_dashboard.css
@@ -38,6 +38,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 1em;
+    padding: var(--paddingGap);
 }
 
 .mainPage > .profile > .profilePic {
