--- a/webpages/teacher_dashboard/teacher_dashboard.css
+++ b/webpages/teacher_dashboard/teacher_dashboard.css
@@ -41,6 +41,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 1em;
+    padding: var(--paddingGap);
 }
 
 .mainPage > .profile > .profilePic {
